# Algoritmos-y-estructuras-de-datos-1

Laboratorios Algoritmos I/: Realizacion de laboratorios
Laboratorios Algoritmos I/Challenge - Labo 12-20200125/competancia_template_alu/: CMakeLists.txt  libros.cpp  libros.h  main.cpp  mayas.cpp  mayas.h  robotitos.cpp  robotitos.h
Laboratorios Algoritmos I/Challenge - Labo 12-20200125/competancia_template_alu/datos/libros/: 1-01.in  1-01.out  2-06.in  2-06.out  4-09.in  4-09.out  5-10.in  5-10.out
Laboratorios Algoritmos I/Challenge - Labo 12-20200125/competancia_template_alu/datos/robotitos/: sample1.in  sample2.in  st1-point-on-line-weak.in
Laboratorios Algoritmos I/Challenge - Labo 12-20200125/competancia_template_alu/tests/: librosTEST.cpp  mayasTEST.cpp  risasTEST.cpp  robotitosTEST.cpp
Laboratorios Algoritmos I/Laboratorio 01-20200125/: CMakeLists.txt  Labo.cpp
Laboratorios Algoritmos I/Laboratorio 02-20200125/: CMakeLists.txt  Ejercicios.cpp  Ejercicios.h  main.cpp
Laboratorios Algoritmos I/Laboratorio 02-20200125/Compilacion desde consola/: main.cpp
Laboratorios Algoritmos I/Laboratorio 03-20200125/template-alumnos/archivos/in/: matrizEnteroFloatBool.csv
Laboratorios Algoritmos I/Laboratorio 04-20200125/labo-debugging/taller/: CMakeLists.txt  ejercicios.cpp  taller
Laboratorios Algoritmos I/Laboratorio 05-20200125/: template-alumnos.rar
Laboratorios Algoritmos I/Laboratorio 05-20200125/template-alumnos/: CMakeLists.txt  ejercicios.cpp  ejercicios.h  main.cpp
Laboratorios Algoritmos I/Laboratorio 05-20200125/template-alumnos/test/: cases.cpp  test.h
Laboratorios Algoritmos I/Laboratorio 06-20200125/taller/: CMakeLists.txt
Laboratorios Algoritmos I/Laboratorio 06-20200125/taller/ej1/: esPrimo.cpp
Laboratorios Algoritmos I/Laboratorio 06-20200125/taller/ej1/Test/: esPrimoTest.cpp  puntajeTEST.cpp
Laboratorios Algoritmos I/Laboratorio 06-20200125/taller/ej2/: llenarTaxis.cpp
Laboratorios Algoritmos I/Laboratorio 06-20200125/taller/ej2/Test/: llenarTaxisTEST.cpp
Laboratorios Algoritmos I/Laboratorio 06-20200125/taller/ej3/: baldosasDelPiso.cpp
Laboratorios Algoritmos I/Laboratorio 06-20200125/taller/ej3/Test/: baldosasDelPisoTEST.cpp
Laboratorios Algoritmos I/Laboratorio 07-20200218/: template_alumnos.rar
Laboratorios Algoritmos I/Laboratorio 07-20200218/template_alumnos/: CMakeLists.txt  ejercicios.cpp  ejercicios.h
Laboratorios Algoritmos I/Laboratorio 07-20200218/template_alumnos/test/: Ej1_productoVectorialTest.cpp  Ej2_trasponerTest.cpp  Ej3_multiplicarTest.cpp  Ej4_promediarTest.cpp  Ej5_contarPicosTest.cpp  Ej6_esTriangularTest.cpp  Ej7_hayAmenazaTest.cpp  Ej8_diferenciaDiagonalesTest.cpp  Ej9_WillieElRobot.cpp
Laboratorios Algoritmos I/Laboratorio 08-20200125/: leeme_si_queres_git.md
Laboratorios Algoritmos I/Laboratorio 08-20200125/labo10/Laboratorio10/: CMakeLists.txt
Laboratorios Algoritmos I/Laboratorio 08-20200125/labo10/Laboratorio10/src/: ejercicios.cpp  ejercicios.h
Laboratorios Algoritmos I/Laboratorio 08-20200125/labo10/Laboratorio10/tests/: tests.cpp
Laboratorios Algoritmos I/Laboratorio 08-20200125/labo10/template_alumnos/src/: ejercicios.cpp
Laboratorios Algoritmos I/Laboratorio 08-20200125/labo10/template_alumnos/tests/: tests.cpp
Laboratorios Algoritmos I/Laboratorio 09-20200125/template_alumnos/: ejercicios.cpp  ejercicios.h  main.cpp
Laboratorios Algoritmos I/Laboratorio 09-20200125/template_alumnos/tests/: buscarTEST.cpp  encontrarRotadoTEST.cpp  menorMasGrandeTEST.cpp  puntoFijoTEST.cpp
Laboratorios Algoritmos I/Laboratorio 09/template_alumnos/: CMakeLists.txt  ejercicios.cpp  main.cpp
Laboratorios Algoritmos I/Laboratorio 09/template_alumnos/tests/: indicePicoTEST.cpp  masCercanoKTEST.cpp
Laboratorios Algoritmos I/Laboratorio 10-20200125/: template-alumnos.rar
Laboratorios Algoritmos I/Laboratorio 10-20200125/anagramas/src/: CMakeLists.txt  anagramas  anagramas.cpp  ingles.dic
Laboratorios Algoritmos I/Laboratorio 10-20200125/bin-package/src/: BPP.in  BPP2.in  BPP3.in  BPP4.in  CMakeLists.txt  bin-package  main.cpp
Laboratorios Algoritmos I/Laboratorio 10-20200125/template-alumnos/anagramas/src/: anagramas.cpp  anagramas.h
Trabajo-Practico/: CMakeLists.txt  Funciones_TPI.h  definiciones.h  ejercicios.cpp  ejercicios.h
Trabajo-Practico/datos/: eph_3c_2016.ti  eph_3c_2016_100.th  eph_3c_2016_1000.th  eph_3c_2018_100.th
Trabajo-Practico/test/: corregirRegionTEST.cpp  creceElTeleworkingEnCiudadesGrandesTEST.cpp  esEncuestaValidaTEST.cpp  indiceGiniTEST.cpp
tpi/: Funciones_TPI.cpp  analisisHabitacional  auxiliares.cpp  auxiliares.h  main.cpp
tpi/datos/: eph_3c_2016.th  eph_3c_2016_100.ti  eph_3c_2016_1000.ti  eph_3c_2018.th  eph_3c_2018.ti  eph_3c_2018_100.ti  eph_3c_2018_1000.th  eph_3c_2018_1000.ti
tpi/test/: histHabitacionalTEST.cpp  laCasaEstaQuedandoChicaTEST.cpp  muestraHomogeneaTEST.cpp  ordenarRegionYCODUSUTEST.cpp
(+5 files in other folders)
